--- a/backend/tests/test_seo_page.html
+++ b/backend/tests/test_seo_page.html
@@ -17,7 +17,7 @@
   <meta name="description" content="">
   <meta name="description" content="重复描述 Duplicate description 重复描述 Duplicate description">
   <meta name="keywords" content="cheap, shoes, cheap shoes, buy cheap shoes, best cheap shoes, free, free free free, discount, 90% off, click here, click here, spam, spam, spam">
-  <meta http-equiv="refresh" content="0; url=/redirect?src=meta">
+  <!-- <meta http-equiv="refresh" content="0; url=/redirect?src=meta"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=7">
   <base href="//wrong.example.com/subdir/">
   <link rel="canonical" href="/relative-canonical">
