finished image capioner

--- a/backend/tests/pipeline_outputs/10_optimization_summary.html
+++ b/backend/tests/pipeline_outputs/10_optimization_summary.html
@@ -85,34 +85,385 @@
             <h3>📊 Optimization Statistics</h3>
             <div class="stat-row">
                 <span>Total Issues Processed:</span>
-                <span><strong>1</strong></span>
+                <span><strong>28</strong></span>
             </div>
             <div class="stat-row">
                 <span>Original HTML Size:</span>
-                <span><strong>10,124 characters</strong></span>
+                <span><strong>9,408 characters</strong></span>
             </div>
             <div class="stat-row">
                 <span>Optimized HTML Size:</span>
-                <span><strong>10,314 characters</strong></span>
+                <span><strong>9,649 characters</strong></span>
             </div>
             <div class="stat-row">
                 <span>Size Change:</span>
-                <span><strong>+190 characters</strong></span>
+                <span><strong>+241 characters</strong></span>
             </div>
         </div>
         
         <div class="issues-section">
             <h3>🔧 Issues Fixed</h3>
             <div class="issue">
-                <h3>Issue 1: Document does not have a meta description</h3>
+                <h3>Issue 1: Image elements do not have `[alt]` attributes</h3>
                 <div class="before-after">
                     <div class="before">
-                        <h4>❌ Before (Lines 0-0)</h4>
-                        <pre>&lt;title&gt;Meta Description Missing Test Page&lt;/title&gt;</pre>
+                        <h4>❌ Before (Lines 178-178)</h4>
+                        <pre>&lt;img src=&quot;social-media-icons.jpg&quot;&gt;</pre>
                     </div>
                     <div class="after">
                         <h4>✅ After</h4>
-                        <pre>&lt;meta name=&quot;description&quot; content=&quot;This page tests for missing meta descriptions, crucial for SEO. Learn why meta descriptions matter and explore our web design, SEO, &amp; marketing services.&quot;&gt;</pre>
+                        <pre>&lt;img src=&quot;social-media-icons.jpg&quot; alt=&quot;Social Media Icons&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 2: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 165-165)</h4>
+                        <pre>&lt;img src=&quot;footer-logo.png&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;footer-logo.png&quot; alt=&quot;Company Logo&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 3: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 147-147)</h4>
+                        <pre>&lt;img src=&quot;office-location.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;office-location.jpg&quot; alt=&quot;Office Location&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 4: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 138-138)</h4>
+                        <pre>&lt;img src=&quot;digital-marketing.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;digital-marketing.jpg&quot; alt=&quot;Digital Marketing&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 5: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 133-133)</h4>
+                        <pre>&lt;img src=&quot;seo-optimization.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;seo-optimization.jpg&quot; alt=&quot;SEO Optimization&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 6: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 128-128)</h4>
+                        <pre>&lt;img src=&quot;web-design.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;web-design.jpg&quot; alt=&quot;Web Design&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 7: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 119-119)</h4>
+                        <pre>&lt;img src=&quot;blog3.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;blog3.jpg&quot; alt=&quot;Building User-Friendly Interfaces&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 8: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 114-114)</h4>
+                        <pre>&lt;img src=&quot;blog2.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;blog2.jpg&quot; alt=&quot;The Future of Web Development&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 9: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 109-109)</h4>
+                        <pre>&lt;img src=&quot;blog1.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;blog1.jpg&quot; alt=&quot;How to Improve Your SEO Strategy&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 10: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 98-98)</h4>
+                        <pre>&lt;img src=&quot;customer2.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;customer2.jpg&quot; alt=&quot;Customer Testimonial Image&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 11: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 91-91)</h4>
+                        <pre>&lt;img src=&quot;customer1.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;customer1.jpg&quot; alt=&quot;Customer 1&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 12: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 81-81)</h4>
+                        <pre>&lt;img src=&quot;designer.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;designer.jpg&quot; alt=&quot;Mike Johnson, Lead Designer&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 13: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 76-76)</h4>
+                        <pre>&lt;img src=&quot;cto.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;cto.jpg&quot; alt=&quot;Jane Doe, Chief Technology Officer&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 14: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 71-71)</h4>
+                        <pre>&lt;img src=&quot;ceo.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;ceo.jpg&quot; alt=&quot;John Smith, CEO and Founder&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 15: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 63-63)</h4>
+                        <pre>&lt;img src=&quot;gallery6.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;gallery6.jpg&quot; alt=&quot;Gallery Image 6&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 16: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 62-62)</h4>
+                        <pre>&lt;img src=&quot;gallery5.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;gallery5.jpg&quot; alt=&quot;Gallery Image 5&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 17: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 61-61)</h4>
+                        <pre>&lt;img src=&quot;gallery4.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;gallery4.jpg&quot; alt=&quot;Gallery Image 4&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 18: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 60-60)</h4>
+                        <pre>&lt;img src=&quot;gallery3.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;gallery3.jpg&quot; alt=&quot;Gallery Image 3&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 19: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 59-59)</h4>
+                        <pre>&lt;img src=&quot;gallery2.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;gallery2.jpg&quot; alt=&quot;Gallery Image 2&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 20: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 58-58)</h4>
+                        <pre>&lt;img src=&quot;gallery1.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;gallery1.jpg&quot; alt=&quot;Gallery Image 1&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 21: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 48-48)</h4>
+                        <pre>&lt;img src=&quot;product3.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;product3.jpg&quot; alt=&quot;Product Three&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 22: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 43-43)</h4>
+                        <pre>&lt;img src=&quot;product2.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;product2.jpg&quot; alt=&quot;Product Two&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 23: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 38-38)</h4>
+                        <pre>&lt;img src=&quot;product1.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;product1.jpg&quot; alt=&quot;Product One&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 24: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 31-31)</h4>
+                        <pre>&lt;img src=&quot;office-building.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;office-building.jpg&quot; alt=&quot;Our Office Building&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 25: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 30-30)</h4>
+                        <pre>&lt;img src=&quot;team-photo.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;team-photo.jpg&quot; alt=&quot;Our Team&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 26: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 29-29)</h4>
+                        <pre>&lt;img src=&quot;product-showcase.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;product-showcase.jpg&quot; alt=&quot;Product Showcase&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 27: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 28-28)</h4>
+                        <pre>&lt;img src=&quot;company-logo.png&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;company-logo.png&quot; alt=&quot;Company Logo&quot;&gt;</pre>
+                    </div>
+                </div>
+            </div>
+            <div class="issue">
+                <h3>Issue 28: Image elements do not have `[alt]` attributes</h3>
+                <div class="before-after">
+                    <div class="before">
+                        <h4>❌ Before (Lines 27-27)</h4>
+                        <pre>&lt;img src=&quot;hero-banner.jpg&quot;&gt;</pre>
+                    </div>
+                    <div class="after">
+                        <h4>✅ After</h4>
+                        <pre>&lt;img src=&quot;hero-banner.jpg&quot; alt=&quot;Hero Banner&quot;&gt;</pre>
                     </div>
                 </div>
             </div>
