--- a/backend/tests/endpoint_test_outputs/optimized.html
+++ b/backend/tests/endpoint_test_outputs/optimized.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<title>Sample Page for SEO Testing</title>
-<meta name="description" content="Sample page for SEO testing. Identifies common issues like empty title tags, missing meta descriptions, and images lacking alt attributes.">
+<title>SEO Testing Page</title>
+<meta name="description" content="Sample page for SEO testing. Identifies common SEO issues like missing titles, descriptions, alt attributes, and structured data. Content section included.">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
