--- a/backend/tests/test_cases/01_image_alt_missing.html
+++ b/backend/tests/test_cases/01_image_alt_missing.html
@@ -24,28 +24,28 @@
             <p>This is a comprehensive test page for missing image alt attributes.</p>
             
             <!-- Missing alt attributes - these should be detected -->
-            <img src="hero-banner.jpg">
-            <img src="company-logo.png">
-            <img src="product-showcase.jpg">
-            <img src="team-photo.jpg">
-            <img src="office-building.jpg">
+            <img src="https://cdn.rickowens.eu/products/197748/large/RU02E1892_LCOW2_0611_02.jpg?1747903991">
+            <img src="https://cdn.rickowens.eu/products/196787/large/RU02E1884_LOO_99_01.jpg?1747146476">
+            <img src="https://cdn.rickowens.eu/products/202363/large/RU02E1889_LCO_1191_01.jpg?1754033972">
+            <img src="https://cdn.rickowens.eu/products/196863/large/RU02E1809_LOO_09_01.jpg?1747208394">
+            <img src="https://cdn.rickowens.eu/products/202406/large/RR02E1883_LWN_04_01.jpg?1754034310">
         </section>
 
         <section class="products">
             <h2>Our Products</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="product1.jpg">
+                    <img src="https://cdn.rickowens.eu/products/202605/large/RR02E1843_LSLCO0_090_01.jpg?1754038633">
                     <h3>Product One</h3>
                     <p>Description of product one with detailed information about its features and benefits.</p>
                 </div>
                 <div class="product-card">
-                    <img src="product2.jpg">
+                    <img src="https://cdn.rickowens.eu/products/197748/large/RU02E1892_LCOW2_0611_02.jpg?1747903991">
                     <h3>Product Two</h3>
                     <p>Description of product two with detailed information about its features and benefits.</p>
                 </div>
                 <div class="product-card">
-                    <img src="product3.jpg">
+                    <img src="https://cdn.rickowens.eu/products/196787/large/RU02E1884_LOO_99_01.jpg?1747146476">
                     <h3>Product Three</h3>
                     <p>Description of product three with detailed information about its features and benefits.</p>
                 </div>
@@ -55,12 +55,12 @@
         <section class="gallery">
             <h2>Photo Gallery</h2>
             <div class="gallery-grid">
-                <img src="gallery1.jpg">
-                <img src="gallery2.jpg">
-                <img src="gallery3.jpg">
-                <img src="gallery4.jpg">
-                <img src="gallery5.jpg">
-                <img src="gallery6.jpg">
+                <img src="https://cdn.rickowens.eu/products/202363/large/RU02E1889_LCO_1191_01.jpg?1754033972">
+                <img src="https://cdn.rickowens.eu/products/196863/large/RU02E1809_LOO_09_01.jpg?1747208394">
+                <img src="https://cdn.rickowens.eu/products/202406/large/RR02E1883_LWN_04_01.jpg?1754034310">
+                <img src="https://cdn.rickowens.eu/products/202605/large/RR02E1843_LSLCO0_090_01.jpg?1754038633">
+                <img src="https://cdn.rickowens.eu/products/197748/large/RU02E1892_LCOW2_0611_02.jpg?1747903991">
+                <img src="https://cdn.rickowens.eu/products/196787/large/RU02E1884_LOO_99_01.jpg?1747146476">
             </div>
         </section>
 
@@ -68,17 +68,17 @@
             <h2>Our Team</h2>
             <div class="team-members">
                 <div class="member">
-                    <img src="ceo.jpg">
+                    <img src="https://cdn.rickowens.eu/products/197748/large/RU02E1892_LCOW2_0611_02.jpg?1747903991">
                     <h3>John Smith</h3>
                     <p>CEO and Founder</p>
                 </div>
                 <div class="member">
-                    <img src="cto.jpg">
+                    <img src="https://cdn.rickowens.eu/products/196787/large/RU02E1884_LOO_99_01.jpg?1747146476">
                     <h3>Jane Doe</h3>
                     <p>Chief Technology Officer</p>
                 </div>
                 <div class="member">
-                    <img src="designer.jpg">
+                    <img src="https://cdn.rickowens.eu/products/202363/large/RU02E1889_LCO_1191_01.jpg?1754033972">
                     <h3>Mike Johnson</h3>
                     <p>Lead Designer</p>
                 </div>
@@ -88,14 +88,14 @@
         <section class="testimonials">
             <h2>Customer Testimonials</h2>
             <div class="testimonial">
-                <img src="customer1.jpg">
+                <img src="https://cdn.rickowens.eu/products/196863/large/RU02E1809_LOO_09_01.jpg?1747208394">
                 <blockquote>
                     "This company has transformed our business with their innovative solutions."
                 </blockquote>
                 <cite>- Sarah Wilson, Marketing Director</cite>
             </div>
             <div class="testimonial">
-                <img src="customer2.jpg">
+                <img src="https://cdn.rickowens.eu/products/202406/large/RR02E1883_LWN_04_01.jpg?1754034310">
                 <blockquote>
                     "Outstanding service and exceptional results. Highly recommended!"
                 </blockquote>
@@ -116,7 +116,7 @@
                 <p>Explore the upcoming trends and technologies in web development.</p>
             </article>
             <article>
-                <img src="blog3.jpg">
+                <img src="https://cdn.rickowens.eu/products/196787/large/RU02E1884_LOO_99_01.jpg?1747146476">
                 <h3>Building User-Friendly Interfaces</h3>
                 <p>Best practices for creating intuitive and accessible user interfaces.</p>
             </article>
